--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,12 @@
 platform = espressif8266
 board = esp12e
 framework = arduino
+lib_deps = fastled/FastLED@^3.6.0
+
+[env:nanoatmega328]
+platform = atmelavr
+board = nanoatmega328
+framework = arduino
+monitor_speed = 115200
+lib_deps = fastled/FastLED@^3.6.0
+
