--- a/platformio.ini
+++ b/platformio.ini
@@ -16,6 +16,7 @@ monitor_speed = 115200
 lib_deps = 
 	fastled/FastLED@^3.6.0
 	bolderflight/Bolder Flight Systems Eigen@^3.0.0
+	blynkkk/Blynk@^1.3.2
 
 [env:nanoatmega328]
 platform = atmelavr
@@ -25,3 +26,4 @@ monitor_speed = 115200
 lib_deps = 
 	fastled/FastLED@^3.6.0
 	bolderflight/Bolder Flight Systems Eigen@^3.0.0
+	blynkkk/Blynk@^1.3.2
