--- a/platformio.ini
+++ b/platformio.ini
@@ -17,6 +17,7 @@ lib_deps =
 	fastled/FastLED@^3.6.0
 	bolderflight/Bolder Flight Systems Eigen@^3.0.0
 	blynkkk/Blynk@^1.3.2
+	electroniccats/MPU6050@^1.0.0
 
 [env:nanoatmega328]
 platform = atmelavr
@@ -27,3 +28,4 @@ lib_deps =
 	fastled/FastLED@^3.6.0
 	bolderflight/Bolder Flight Systems Eigen@^3.0.0
 	blynkkk/Blynk@^1.3.2
+	electroniccats/MPU6050@^1.0.0
